--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,10 +9,12 @@ jobs:
 
     steps:
     - uses: actions/checkout@v1
+    - uses: actions/setup-node@v1
+      with:
+        node-version: '12.13'
+
     - name: Set up deps
-      run: |
-        nvm use
-        npm install
+      run: npm install
     - name: Lint
       run: npm run lint
     - name: Compile
