Cache node_modules

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,6 +13,12 @@ jobs:
       with:
         node-version: '12.13'
 
+    - name: Cache node_modules
+      uses: actions/cache@v1
+      with:
+        path: node_modules
+        key: ${{ runner.os }}-node-modules
+
     - name: Set up deps
       run: npm install
     - name: Lint
