--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,7 +6,6 @@ env:
   stuff: "wow"
   starts: ${{ startsWith(github.ref, 'refs/tags/asd') }}
   returns: ${{ github.event_name == 'push' }}
-  stuffIs: ${{ env.stuff == 'wow' }}
   
 jobs:
   build:
@@ -46,6 +45,8 @@ jobs:
   job2:
     runs-on: ubuntu-latest
     needs: job1
+    env:
+      stuffIs: ${{ env.stuff == 'wow' }}
     steps: 
       - name: Am I ${{ needs.job1.outputs.TEST_OUTPUT }}
         run: echo "Woot"
