--- a/package.json
+++ b/package.json
@@ -3,15 +3,10 @@
   "version": "1.0.0",
   "description": "Testing github actions",
   "main": "index.ts",
-  "dependencies": {
-    "tslint": "^5.20.1",
-    "typescript": "^3.7.2"
-  },
-  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "compile": "tsc",
-    "lint": "tslint -c tslint.json '*.ts'"
+    "lint": "TIMING=1 eslint . --ext .ts"
   },
   "repository": {
     "type": "git",
@@ -22,5 +17,14 @@
   "bugs": {
     "url": "https://github.com/lovenm/actions/issues"
   },
-  "homepage": "https://github.com/lovenm/actions#readme"
+  "homepage": "https://github.com/lovenm/actions#readme",
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.42.1",
+    "eslint": "^8.27.0",
+    "eslint-config-standard-with-typescript": "^23.0.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-n": "^15.5.1",
+    "eslint-plugin-promise": "^6.1.1",
+    "typescript": "^4.8.4"
+  }
 }
